# samples

cmake/01_first_sample/: CMakeLists.txt  README.md  main.cpp
cmake/02_library/: CMakeLists.txt  README.md  main.cpp
cmake/02_library/mylib/: CMakeLists.txt
cmake/02_library/mylib/include/: mylib.h
cmake/02_library/mylib/src/: mylib.cpp
cmake/03_cache_variable/: CMakeLists.txt  README.md
python/basic/: README.md
python/basic/01_helloworld/: README.md  helloworld.py
python/basic/02_package/: README.md
python/basic/02_package/mypackage/: mymodule.py
python/basic/package/: README.md  package.py
python/basic/package/mypackage/: __init__.py
python/pandas/pandas_plot/: clean.sh
python/pandas/polyfit/: data.txt
python/pandas_plot/: plot.py
python/polyfit/: polyfit.py
shell/: coding-rule.sh  coding.sh  grammar.sh  if.sh
